# Gianpiero-AC-IA-Agent

./: .env.example  .gitignore  README.md  analyze_frame.py  analyze_kevin_csv.py  debug_offsets.py  dump_kevin_frame.py  exhaustive_time_search.py  find_kevin.py  find_kevin_frame.py  find_time_offsets.py  mcp.config.example.json  pyproject.toml  regenerate_kevin_json.py  test_new_offset.py
src/ac_mcp/: README_acreplay_parser_native.md  __init__.py  __main__.py  acreplay_parser_native.py  advisor.py  config.py  llm.py  pipeline.py  references.py  server.py  setup_io.py  telemetry.py  telemetry_analysis.py  telemetry_shared_memory.py
tests/: test_acreplay_parser_native.py  test_advisor.py  test_base_setup.py  test_e2e_flow.py  test_llm_and_shared_memory.py  test_llm_parsing.py  test_pipeline.py  test_references.py  test_replay_tools.py  test_setup_io.py  test_telemetry_analysis.py
tests/fixtures/analysis_logs/ac_content/tracks/ks_autodrom_most/: corner_profile.json
tests/fixtures/analysis_logs/shared_memory/: 20260107T000000Z_vallelunga_known_profile.json
tests/fixtures/base_setup/mclaren_720s_gt3_evo/generic/: last.ini
tests/fixtures/base_setup/mclaren_720s_gt3_evo/spa/: From Julio Coria.ini
tests/fixtures/base_setup/tatuusfa1/ks_brands_hatch/: tatuus - brands hatch.ini
tests/fixtures/pipeline/mclaren_720s_gt3_evo/generic/: last.ini  last_v002.ini  last_v015.ini
