[project]
name = "ac-mcp"
version = "0.1.0"
description = "MVP MCP server for Assetto Corsa setup analysis and safe edits"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.9.0",
  "pydantic>=2.7.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
iracing = [
  "pyirsdk>=1.3.5"
]

[project.scripts]
ac-mcp = "ac_mcp.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
